Fix: Add opacity to radio buttons to hide dots on Firefox browser.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ li {
     .vegetable-picker input {
         width: 0px;
         height: 0px;
+        opacity: 0;
     }
 
     .radio-under img {
